src/pages/Demo.txt
Failed to compile.

SyntaxError: /home/react-app/src/components/Login/Login.js: Unexpected token (68:2)
  66 |
  67 | export default function Login() {
> 68 |   ...
     |   ^
  69 | }
  70 |
  71 |
    at parser.next (<anonymous>)
ERROR in ./src/components/Login/Login.js
Module build failed (from ./node_modules/babel-loader/lib/index.js):
SyntaxError: /home/react-app/src/components/Login/Login.js: Unexpected token (68:2)

  66 |
  67 | export default function Login() {
> 68 |   ...
     |   ^
  69 | }
  70 |
  71 |
    at instantiate (/home/react-app/node_modules/@babel/parser/lib/index.js:64:32)
    at constructor (/home/react-app/node_modules/@babel/parser/lib/index.js:364:12)
    at FlowParserMixin.raise (/home/react-app/node_modules/@babel/parser/lib/index.js:3253:19)
    at FlowParserMixin.unexpected (/home/react-app/node_modules/@babel/parser/lib/index.js:3283:16)
    at FlowParserMixin.parseExprAtom (/home/react-app/node_modules/@babel/parser/lib/index.js:11248:22)
    at FlowParserMixin.parseExprAtom (/home/react-app/node_modules/@babel/parser/lib/index.js:6992:20)
    at FlowParserMixin.parseExprSubscripts (/home/react-app/node_modules/@babel/parser/lib/index.js:10859:23)
    at FlowParserMixin.parseUpdate (/home/react-app/node_modules/@babel/parser/lib/index.js:10842:21)
    at FlowParserMixin.parseMaybeUnary (/home/react-app/node_modules/@babel/parser/lib/index.js:10818:23)
    at FlowParserMixin.parseMaybeUnaryOrPrivate (/home/react-app/node_modules/@babel/parser/lib/index.js:10656:61)
    at FlowParserMixin.parseExprOps (/home/react-app/node_modules/@babel/parser/lib/index.js:10661:23)
    at FlowParserMixin.parseMaybeConditional (/home/react-app/node_modules/@babel/parser/lib/index.js:10638:23)
    at FlowParserMixin.parseMaybeAssign (/home/react-app/node_modules/@babel/parser/lib/index.js:10599:21)
    at FlowParserMixin.parseMaybeAssign (/home/react-app/node_modules/@babel/parser/lib/index.js:5816:18)
    at FlowParserMixin.parseExpressionBase (/home/react-app/node_modules/@babel/parser/lib/index.js:10553:23)
    at /home/react-app/node_modules/@babel/parser/lib/index.js:10549:39
    at FlowParserMixin.allowInAnd (/home/react-app/node_modules/@babel/parser/lib/index.js:12239:16)
    at FlowParserMixin.parseExpression (/home/react-app/node_modules/@babel/parser/lib/index.js:10549:17)
    at FlowParserMixin.parseStatementContent (/home/react-app/node_modules/@babel/parser/lib/index.js:12682:23)
    at FlowParserMixin.parseStatementLike (/home/react-app/node_modules/@babel/parser/lib/index.js:12548:17)
    at FlowParserMixin.parseStatementLike (/home/react-app/node_modules/@babel/parser/lib/index.js:5135:24)
    at FlowParserMixin.parseStatementListItem (/home/react-app/node_modules/@babel/parser/lib/index.js:12528:17)
    at FlowParserMixin.parseBlockOrModuleBlockBody (/home/react-app/node_modules/@babel/parser/lib/index.js:13120:61)
    at FlowParserMixin.parseBlockBody (/home/react-app/node_modules/@babel/parser/lib/index.js:13113:10)
    at FlowParserMixin.parseBlock (/home/react-app/node_modules/@babel/parser/lib/index.js:13101:10)
    at FlowParserMixin.parseFunctionBody (/home/react-app/node_modules/@babel/parser/lib/index.js:11911:24)
    at FlowParserMixin.parseFunctionBody (/home/react-app/node_modules/@babel/parser/lib/index.js:5112:18)
    at FlowParserMixin.parseFunctionBodyAndFinish (/home/react-app/node_modules/@babel/parser/lib/index.js:11897:10)
    at FlowParserMixin.parseFunctionBodyAndFinish (/home/react-app/node_modules/@babel/parser/lib/index.js:5120:18)
    at /home/react-app/node_modules/@babel/parser/lib/index.js:13256:12
    at FlowParserMixin.withSmartMixTopicForbiddingContext (/home/react-app/node_modules/@babel/parser/lib/index.js:12221:14)
    at FlowParserMixin.parseFunction (/home/react-app/node_modules/@babel/parser/lib/index.js:13255:10)
    at FlowParserMixin.parseExportDefaultExpression (/home/react-app/node_modules/@babel/parser/lib/index.js:13740:19)
    at FlowParserMixin.parseExportDefaultExpression (/home/react-app/node_modules/@babel/parser/lib/index.js:5183:18)
    at FlowParserMixin.parseExport (/home/react-app/node_modules/@babel/parser/lib/index.js:13667:25)
    at FlowParserMixin.parseExport (/home/react-app/node_modules/@babel/parser/lib/index.js:5312:24)
    at FlowParserMixin.parseStatementContent (/home/react-app/node_modules/@babel/parser/lib/index.js:12660:27)
    at FlowParserMixin.parseStatementLike (/home/react-app/node_modules/@babel/parser/lib/index.js:12548:17)
    at FlowParserMixin.parseStatementLike (/home/react-app/node_modules/@babel/parser/lib/index.js:5135:24)
    at FlowParserMixin.parseModuleItem (/home/react-app/node_modules/@babel/parser/lib/index.js:12525:17)
    at FlowParserMixin.parseBlockOrModuleBlockBody (/home/react-app/node_modules/@babel/parser/lib/index.js:13120:36)
    at FlowParserMixin.parseBlockBody (/home/react-app/node_modules/@babel/parser/lib/index.js:13113:10)
    at FlowParserMixin.parseProgram (/home/react-app/node_modules/@babel/parser/lib/index.js:12439:10)
    at FlowParserMixin.parseTopLevel (/home/react-app/node_modules/@babel/parser/lib/index.js:12429:25)
    at FlowParserMixin.parseTopLevel (/home/react-app/node_modules/@babel/parser/lib/index.js:5954:28)
    at FlowParserMixin.parse (/home/react-app/node_modules/@babel/parser/lib/index.js:14250:10)
    at parse (/home/react-app/node_modules/@babel/parser/lib/index.js:14292:38)
    at parser (/home/react-app/node_modules/@babel/core/lib/parser/index.js:41:34)
    at parser.next (<anonymous>)
    at normalizeFile (/home/react-app/node_modules/@babel/core/lib/transformation/normalize-file.js:64:38)

ERROR in [eslint] 
src/components/Login/Login.js
  Line 68:2:  Parsing error: Unexpected token (68:2)

webpack compiled with 2 errors